fix sizing and alignment of project links

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,6 +41,10 @@
     padding: 0;
 }
 
+.caption {
+  width: 400px;
+}
+
 .centered {
 	text-align: center
 }
